--- a/app.ipynb
+++ b/app.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11250\n",
-      "11250\n",
-      "1250\n",
-      "1250\n"
+      "12377\n",
+      "12372\n",
+      "2377\n",
+      "2372\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karat\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Conv2D(16, (3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
@@ -271,7 +280,15 @@
    ],
    "source": [
     "training_loc = r\"C:\\Users\\karat\\Downloads\\kagglecatsanddogs_5340\\cats-v-dogs\\training\"\n",
-    "train_datagen = ImageDataGenerator(rescale=1.0/255.)\n",
+    "train_datagen = ImageDataGenerator(rescale=1.0/255.,\n",
+    "                                    rotation_range=40,               \n",
+    "                                    width_shift_range=0.2,          \n",
+    "                                    height_shift_range=0.2,          \n",
+    "                                    shear_range=0.2,                 \n",
+    "                                    zoom_range=0.2,                 \n",
+    "                                    horizontal_flip=True,            \n",
+    "                                    fill_mode='nearest')\n",
+    "\n",
     "train_generator = train_datagen.flow_from_directory(training_loc,\n",
     "                                                    batch_size=100,\n",
     "                                                    class_mode='binary',\n",
